--- a/fe_baprjct/package.json
+++ b/fe_baprjct/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "animejs": "^4.0.2",
     "bootstrap": "^5.3.6",
     "jquery": "^3.7.1",
     "magnific-popup": "^1.2.0",
